--- a/src/app/ciudades/ciudades.component.html
+++ b/src/app/ciudades/ciudades.component.html
@@ -1,26 +1,24 @@
 <div class="container">
   <h2 class="text-center mt-5">Ciudades</h2>
   <div class="row">
-    <div class="row">
-      <div class="col-sm-4 mt-5" *ngFor="let item of ciudades">
-        <div class="card">
-          <div class="card-header">
-              <h5 class="text-center mt-2">{{item.ciudad}}</h5>
+    <div class="col-sm-4 mt-5" *ngFor="let item of ciudades">
+      <div class="card">
+        <div class="card-header">
+          <h5 class="text-center mt-2">{{item.ciudad}}</h5>
+        </div>
+        <div class="card-body">
+
+          <div class="row">
+            <div class="col-sm-6 card-text">Latitud: {{item.latitud}}</div>
+            <div class="col-sm-6 card-text">Longitud: {{item.longitud}}</div>
           </div>
-          <div class="card-body">
-            
-            <div class="row">
-                <div class="col-sm-6 card-text">Latitud: {{item.latitud}}</div>
-                <div class="col-sm-6 card-text">Longitud: {{item.longitud}}</div>              
-            </div>
+        </div>
+        <div class="card-footer">
+          <div class="row">
+            <div class="col-sm-6 card-text">Hora: {{item.hora}}</div>
+            <div class="col-sm-6 card-text">Clima: {{item.temperatura | number:'2.1-1'}} °C.</div>
           </div>
-          <div class="card-footer">
-                <div class="row">
-                    <div class="col-sm-6 card-text">Hora: {{item.hora}}</div>
-                    <div class="col-sm-6 card-text">Clima: {{item.temperatura}} F.</div>  
-                </div>          
-            </div>
         </div>
       </div>
     </div>
-  </div>
+</div>
