--- a/src/app/ciudades/ciudades.component.html
+++ b/src/app/ciudades/ciudades.component.html
@@ -17,7 +17,7 @@
           <div class="card-footer">
                 <div class="row">
                     <div class="col-sm-6 card-text">Hora: {{item.hora}}</div>
-                    <div class="col-sm-6 card-text">Clima: {{item.temperatura}} F.</div>
+                    <div class="col-sm-6 card-text">Clima: {{item.temperatura | number:'2.1-1' }} °C</div>
                 </div>
             </div>
         </div>
